--- a/recipes/augur/meta.yaml
+++ b/recipes/augur/meta.yaml
@@ -1,4 +1,5 @@
 {% set version = "11.1.2" %}
+{% set pkg = load_setup_py_data() %}
 
 package:
   name: augur
@@ -9,7 +10,7 @@ source:
   sha256: 2a131514c0aa31cabdb24357a116c8f81e79faff4087caed7b81640195056a9c
 
 build:
-  number: 1
+  number: 2
   noarch: python
   entry_points:
     - augur = augur.__main__:main
@@ -17,19 +18,33 @@ build:
 
 requirements:
   host:
-    - python >=3.6
+    - python {{ pkg.python_requires }}
     - pip
 
   run:
-    - python >=3.6
-    - bcbio-gff >=0.6.0,<0.7
-    - biopython >=1.67,<=1.76
-    - jsonschema >=3.0.0,<4
-    - packaging >=19.2
-    - pandas >=1.0.0,<2
-    - treetime >=0.8,<0.9
+    - python {{ pkg.python_requires }}
+
+    # Requirements declared in Augur's setup.py
+{%
+  set pypi_to_conda = {
+    "phylo-treetime": "treetime",
+  }
+%}
+{% for req in pkg.install_requires %}
+  {% if ' ' in req %}
+    {% set name, versions = req.split(maxsplit=1) %}
+  {% else %}
+    {% set name, versions = req, '' %}
+  {% endif %}
+    - {{ pypi_to_conda[name] | default(name) }} {{versions.replace(' ', '')}}
+{% endfor %}
+
+    # Extras which will typically be desired in a Conda installation of Augur,
+    # from PyPI:
     - snakemake >=5.4.0
     - cvxopt >=1.1.9,<2
+
+    # …and non-Python packages.
     - mafft
     - raxml
     - fasttree
