--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,10 @@ variables:
     run:
       name: Download common definitions
       command: |
-        curl -s https://raw.githubusercontent.com/bioconda/bioconda-common/master/common.sh > .circleci/common.sh
+        if [[ ! -e .circleci/common.sh ]]; then
+          echo "Downloading common.sh from GitHub"
+          curl -s https://raw.githubusercontent.com/bioconda/bioconda-common/master/common.sh > .circleci/common.sh
+        fi
   setup: &setup
     run:
       name: Setup bioconda-utils
